# Play

./: .gitignore  CMakeLists.txt  README.markdown
doc/: cpplint.py  do-cmake  do-cmake-clang  do-cmake-intel  doxygen.config  google.cfg  pre-commit-google.sh
src/: Play.hpp  main.cpp  unit-tests.cpp
